   * A few improvements for EDL/CLIPNAME - thx Chungyu
   * Allow hex color paste in advanced color dialog
   * Improve labels in "Show earlier/later" - thx PM
   * Make "load second subtitle" work with more subtitle formats - thx PM
   * Improve compare colors for dark theme - thx OmrSi
   * Minor UI improvements for nOCR character inspect
   * Add clear to File - Recent files - thx Dominiquini/OmrSi
   * Make bd sup edit work better with full frame images - thx peter-qgd
* FIXED:
   * Fix for reading bdsup position - thx akaicat
   * Fix a few crashes in translation engine - thx howblast/Laís
   * Fix mpv dll loading from a folder with e.g. cyrillic chars - thx Zoran
   * Fix for EBU time code writing - thx milenko
   * Fix show (correct) EBU properties for current file - thx Emilien
   * Fix non-ASCII chars when enc 20269 is unavailable (Linux) - thx jason
   * Fix a crash in RTL when activating syntax coloring - thx OmrSi
   * Fix auto translate shortcut - thx xmrea
   * Some fixes for editing source view - thx PreetM07
   * Fix bug converting vtt two line color text to srt
   * Fix FCE issue w missing spaces/French language - thx  kyrpasto/OmrSi


3.6.0 (18th February 2021)
* NEW:
   * Use dotnet framework 4.7.2 (WinXP/Vista no longer supported)
   * Add edit/sync of bdsup with position - thx von Suppé/Janusz
   * Add internal store for ASSA styles - thx Leon/z3us
   * Add dark theme - thx OmrSi/dvjrickkraft/MuhammadiJK
   * Add copy-paste translate
   * Add "Delete lines" to "Batch convert" - thx Milenko
   * Add two new sub formats - thx Matthew
   * Add new ttml/dfxp variant - thx Mikhail
   * Add shortcut "Set start and set end of previous" - thx Jeff
   * Add shortcut "Play from beginning of video" - thx Kimberly
   * Add shortcut for toggle casing - thx LeonCheung
   * Add shortcut toggle focus between list view/waveform - thx OmrSi
   * Add toggle color shortcuts - thx Jan
   * Add optional syntax coloring for textbox w live spell check - thx OmrSi